# ProcrastinationBuddy

./: .gitignore  LICENSE  README.md  buddy.sh  compose.yaml
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: quality-gate.yaml
backend/: Dockerfile  app.py  pyproject.toml
backend/config/: config.py
backend/procrastination/: db.py  procrastination.py
backend/src/: app.py
backend/src/db/: base.py  config.py  crud.py  db.py  models.py  session.py
backend/src/routes/: settings.py  tasks.py
backend/src/services/: settings.py  tasks.py
backend/test/: test_db.py  test_settings_route.py  test_tasks_route.py  test_tasks_service.py
db-init/: 10-pghba.sh
e2e-tests/: package-lock.json  playwright.config.ts
frontend/: .gitignore  Dockerfile  app.py  constants.py  pyproject.toml  ui.py  utils.py
frontend/src/: app.py
frontend/src/config/: constants.py  state.py
frontend/src/ui/: dialogs.py  page_setup.py  rendering.py  ui.py
frontend/src/utils/: settings_api.py  tasks_api.py  text.py  time.py  utils.py
frontend/test/: test_settings_api.py  test_state.py  test_task_api.py  test_text.py  test_time.py
tests/api/: bruno.json  collection.bru  package-lock.json  package.json
tests/api/ollama/: folder.bru  generate.bru  health.bru  list models.bru
tests/api/settings/: folder.bru  read settings.bru  write settings.bru
tests/api/tasks/: count tasks.bru  create task.bru  delete task.bru  like task.bru  list tasks.bru
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/e2e/tests/: info-modal.ts  procrastination-fixture.ts  procrastination-page.ts  procrastination.spec.ts  settings-modal.ts
