[project]
name = "procrastinationbuddy-backend"
version = "0.1.0"
description = "ProcrastinationBuddy Backend"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "sqlalchemy>=2.0.40",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
