[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytz>=2025.2",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "st-theme>=1.2.3",
    "streamlit>=1.44.1",
    "streamlit-javascript>=0.1.5",
]
