[project]
name = "procrastinationbuddy-frontend"
version = "0.1.0"
description = "ProcrastinationBuddy Frontend"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "st-theme>=1.2.3",
    "streamlit>=1.44.1",
    "streamlit-javascript>=0.1.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
