[project]
name = "procrastinationbuddy-frontend"
version = "0.1.0"
description = "ProcrastinationBuddy Frontend"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.3",
    "pytz>=2025.2",
    "requests>=2.33.1",
    "ruff>=0.15.12",
    "st-theme>=1.2.3",
    "streamlit>=1.57.0",
    "streamlit-javascript>=0.1.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
